Added custom navbar for specific users

--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -13,7 +13,7 @@
     border-top: 2px solid white;
 }
 
-.navbar img {
+.nav-logo {
     position: absolute;
     margin-top: -2vh;
     left: 43vw;
