--- a/src/components/Navbar.css
+++ b/src/components/Navbar.css
@@ -24,6 +24,7 @@
     display: flex;
     /* justify-content: space-between; */
     overflow: hidden;
+    height: 3vh;
 }
 
 .navbar a {
@@ -33,4 +34,19 @@
     letter-spacing: 3px;
     display: inline-block;
     position: relative;
+}
+
+.navbar a::after {
+    content: "";
+    position: absolute;
+    background-color: white;
+    height: 3px;
+    width: 0;
+    left: 0;
+    bottom: 0vh;
+    transition: 0.3s ease-out;
+}
+
+.navbar a:hover::after {
+    width: 100%;
 }
