Fixed the loader

--- a/src/components/ProgressBar.css
+++ b/src/components/ProgressBar.css
@@ -1,3 +1,18 @@
 .progress {
-    width: 10px;
+    position: absolute;
+    bottom: 12vh;
+    margin-left: 2vw;
+    /* margin-top: 20vw; */
+    height: 10px;
+    background-color: white;
+    /* width: 100px; */
+}
+
+.progress-bar h2 {
+    position: absolute;
+    color: white;
+    font-family: Furore;
+    bottom: 15vh;
+    right: 5vw;
+    font-size: 15vw;
 }
