--- a/src/routes/Tournament.css
+++ b/src/routes/Tournament.css
@@ -1,11 +1,3 @@
-.tournament-page h1 {
-    color: white;
-    font-family: Baron Neue;
-    font-size: 1.2vw;
-    font-weight: 100;
-    margin-bottom: 1vh;
-}
-
 .tournament-game-image {
     position: absolute;
     bottom: 0;
@@ -14,4 +6,41 @@
 .tournament-game-title {
     position: absolute;
     top: 0;
+}
+
+.tournament-content {
+    position: absolute;
+    right: 0;
+    height: 100vh;
+    width: 55vw;
+    /* background-color: #2A10B3; */
+    display: flex;
+    flex-direction: column;
+    padding-left: 5vw;
+}
+
+.tournament-content h1 {
+    margin-top: 30vh;
+    color: #EA1626;
+    font-family: Furore;
+    font-size: 3.5vw;
+    margin-bottom: 2.5vh;
+}
+
+.tournament-content p {
+    max-width: 50vw;
+}
+
+.date {
+    background-color: #2A10B3;
+    position: absolute;
+    right: 0;
+    top: 60vh;
+    padding: 1vw 2vw;
+}
+
+.date h2 {
+    font-family: Furore;
+    font-size: 1.5vw;
+    color: white;
 }
