--- a/src/components/hamburger-menu/HamburgerMenu.css
+++ b/src/components/hamburger-menu/HamburgerMenu.css
@@ -7,4 +7,11 @@
     top: 0;
     z-index: 95;
     transform: translateX(100%);
+    padding-top: 20vh;
+    padding-left: 10vw;
+}
+
+.special-logo {
+    margin-left: 3vw;
+    margin-top: 2vh;
 }
