--- a/src/routes/Tournament.css
+++ b/src/routes/Tournament.css
@@ -11,7 +11,7 @@
 .tournament-content {
     position: absolute;
     right: 0;
-    height: 100vh;
+    max-height: 100vh;
     width: 55vw;
     /* background-color: #2A10B3; */
     display: flex;
