--- a/src/components/admin/TournamentForms.css
+++ b/src/components/admin/TournamentForms.css
@@ -1,10 +1,21 @@
 .tournament-form {
     display: flex;
     flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    width: 100%;
-    height: 100%;
-    padding: 0 10px;
-    background-color: white;
+    width: 69vw;
+    height: 80vh;
+    margin-left: 32vw;
+    align-items: flex-start;
+}
+
+.tournament-form label {
+    color: white;
+    font-family: Addington;
+    font-size: 2vw;
+}
+
+.tournament-form div {
+    display: flex;
+    flex-direction: column;
+    left: 0;
+    margin-left: 0;
 }
