--- a/src/components/ImageUploadForm.css
+++ b/src/components/ImageUploadForm.css
@@ -10,6 +10,8 @@ input[type="file"] {
     padding: 1.5vh 1vw;
     background-color: #2A10B3;
     cursor: pointer;
+    margin-bottom: 2vh;
+    border: none;
 }
 
 .slider {
@@ -23,4 +25,4 @@ input[type="file"] {
     font-size: 1.5vw !important;
     font-weight: 100;
     margin-top: 2vh;
-}   
+}
