--- a/src/components/admin/Panel.css
+++ b/src/components/admin/Panel.css
@@ -2,7 +2,7 @@
     height: 80vh;
     border-right: 2px solid white;
     width: 30vw;
-    position: absolute;
+    position: fixed;
     bottom: 0;
     left: 0;
 }
