--- a/src/components/home/Hero.css
+++ b/src/components/home/Hero.css
@@ -48,8 +48,7 @@
 
 .hero-left a {
     font-family: Baron Neue;
-    border-top: 2px solid white;
-    border-bottom: 2px solid white;
+    border: 2px solid white;
     font-size: 1.5vw;
     padding-top: 0.5vh;
 }
