--- a/src/components/shop/Sale.css
+++ b/src/components/shop/Sale.css
@@ -6,7 +6,7 @@
 }
 
 .sale-text {
-    background-color: #2A10B3;
+    background: linear-gradient(to right, #EA1626, #2A10B3);
     width: 60%;
     padding-top: 2vh;
     padding-left: 2vw;
