--- a/src/routes/Login.css
+++ b/src/routes/Login.css
@@ -97,8 +97,8 @@
     position: absolute;
     right: 10vw;
     top: 30vh;
-    width: 10vw;
-    height: 10vw;
+    width: 20vw;
+    height: 10vh;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -107,6 +107,7 @@
 .profile-pic-upload h1 {
     color: white;
     font-size: 10vw;
+
 }
 
 .transition {
