--- a/src/components/admin/Panel.css
+++ b/src/components/admin/Panel.css
@@ -18,3 +18,14 @@
     padding-left: 2vw;
     cursor: pointer;
 }
+
+.panel ul {
+    color: white;
+}
+
+.panel li {
+    list-style: none;
+    font-family: Addington;
+    margin-top: 1vh;
+    font-size: 1.5vw;
+}
